--- a/Italian.po
+++ b/Italian.po
@@ -21,7 +21,7 @@ msgid "MasterDesc-DG000000"
 msgstr "''Alla fine mi hai trovato'' dice ridendo senza paura ''ora divorerò il tuo cadavere!''"
 
 msgid "MasterDesc-DG000001"
-msgstr ":@MasterDesc-DG000000 testing!"
+msgstr ":@MasterDesc-DG000000"
 
 msgid "MasterDesc-DG000002"
 msgstr ":@MasterDesc-DG000000"
@@ -13817,7 +13817,7 @@ msgstr "Hai avuto un odore dolce da questa grave."
 msgid "MasterDesc-ESSE0902"
 msgstr "Felice Halloween!"
 
-msgid "TEXT_NEWS_PH_TITLE_MINI_EVENT "
+msgid "TEXT_NEWS_PH_TITLE_MINI_EVENT"
 msgstr "Mini Evento __ ''{0}'' ha iniziato!"
 
 msgid "TEXT_NEWS_PH_BODY_SEASON_EVENT_9_1"
